--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Strengthy",
-  "name": "Fitness website Strengthy Gym",
+  "short_name": "Fit with Me",
+  "name": "Fitness website Fit with Me Gym",
   "icons": [
     {
       "src": "favicon.ico",
